recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:16: error: identifier expected but ')' found.
    left(60.);
            ^Koch:18: error: identifier expected but ')' found.
    right(120.);
              ^Koch:20: error: identifier expected but ')' found.
    left(60.);
            ^